# massala

## v0 - 2018-11-22

* Add naming in versions
* Force pika library version 0.11.2 in biomaj-download and biomaj-process (latest not working)