@@ -1,0 +1,290 @@
+ version: '2'
+
+ services:
+
+    traefik:
+        image: traefik
+        ports:
+                - "8080:8080"
+                - "8081:80"
+        volumes:
+                - ${BIOMAJ_DIR}/proxy/traefik/traefik.toml:/etc/traefik/traefik.toml
+
+    traefik-int:
+        image: traefik
+        ports:
+                - "8082:8080"
+                - "8083:80"
+        volumes:
+                - ${BIOMAJ_DIR}/proxy/traefik/traefik-int.toml:/etc/traefik/traefik.toml
+
+
+    biomaj-mongo:
+        image: mongo
+        volumes:
+            - ${BIOMAJ_DIR}/mongo:/data/db
+
+    biomaj-redis:
+        image: redis
+        volumes:
+            - ${BIOMAJ_DIR}/redis:/data
+
+    biomaj-elasticsearch:
+        image: "elasticsearch:2"
+        command: "elasticsearch -Des.cluster.name='biomaj'"
+
+    biomaj-rabbitmq:
+        image: rabbitmq
+        hostname: biomaj-rabbitmq
+        command: rabbitmq-server
+        entrypoint: ""
+        volumes:
+            - ${BIOMAJ_DIR}/rabbitmq:/var/lib/rabbitmq
+            - ${BIOMAJ_DIR}/biomaj-config/rabbitmq.config:/etc/rabbitmq/rabbitmq.config:ro
+        environment:
+            - RABBITMQ_DEFAULT_USER=biomaj
+            - RABBITMQ_DEFAULT_PASS=biomaj
+
+    biomaj-consul:
+        image: consul
+        hostname: consulnode1
+        ports:
+            - "8400:8400"
+            - "8500:8500"
+            - "8600:53"
+
+    biomaj-prometheus:
+        image: prom/prometheus:v1.8.2
+        ports:
+            - "9090:9090"
+        volumes:
+            - ${BIOMAJ_DIR}/biomaj-config/prometheus.yml:/etc/prometheus/prometheus.yml
+        depends_on:
+            - biomaj-consul
+        command:
+            - '-storage.local.retention=720h'
+            - '-config.file=/etc/prometheus/prometheus.yml'
+
+    biomaj-influxdb:
+        image: influxdb
+        volumes:
+            - ${BIOMAJ_DIR}/influxdb:/var/lib/influxdb
+
+    biomaj-internal-proxy:
+        image: osallou/biomaj-proxy
+        # To be deleted in production
+        ports:
+            - "5080:80"
+        volumes:
+            - ${BIOMAJ_DIR}/proxy/internal:/proxy:ro
+            - ${BIOMAJ_DIR}/biomaj:/var/lib/biomaj
+        depends_on:
+            - biomaj-consul
+
+    biomaj-public-proxy:
+        image: osallou/biomaj-proxy
+        volumes:
+            - ${BIOMAJ_DIR}/proxy/public:/proxy:ro
+            - ${BIOMAJ_DIR}/biomaj:/var/lib/biomaj/data
+        ports:
+            - "5000:80"
+        depends_on:
+            - biomaj-consul
+
+    biomaj-user-web:
+        image: osallou/biomaj-docker
+        volumes:
+            - ${BIOMAJ_DIR}/biomaj:/var/lib/biomaj/data
+        environment:
+            - BIOMAJ_USER_PASSWORD=${BIOMAJ_USER_PASSWORD}
+            - BIOMAJ_CONFIG=/etc/biomaj/config.yml
+            - REDIS_PREFIX=biomajuser
+            - RABBITMQ_USER=biomaj
+            - RABBITMQ_PASSWORD=biomaj
+        depends_on:
+            - biomaj-mongo
+            - biomaj-consul
+            - biomaj-rabbitmq
+            - biomaj-redis
+            - biomaj-elasticsearch
+        command: bash -c "sleep 10 ; gunicorn -b 0.0.0.0:5000 --log-config /etc/biomaj/production.ini biomaj_user.wsgi:app"
+
+
+    biomaj-download-web:
+        image: osallou/biomaj-docker
+        volumes:
+            - ${BIOMAJ_DIR}/biomaj:/var/lib/biomaj/data
+        environment:
+            - BIOMAJ_USER_PASSWORD=${BIOMAJ_USER_PASSWORD}
+            - BIOMAJ_CONFIG=/etc/biomaj/config.yml
+            - REDIS_PREFIX=biomajdownload
+            - RABBITMQ_USER=biomaj
+            - RABBITMQ_PASSWORD=biomaj
+        depends_on:
+            - biomaj-mongo
+            - biomaj-consul
+            - biomaj-rabbitmq
+            - biomaj-redis
+            - biomaj-elasticsearch
+        command: bash -c "sleep 10 ; gunicorn -c /etc/biomaj/gunicorn_conf.py -b 0.0.0.0:5000 --log-config /etc/biomaj/production.ini biomaj_download.biomaj_download_web:app"
+
+    biomaj-download-message:
+        image: osallou/biomaj-docker
+        volumes:
+            - ${BIOMAJ_DIR}/biomaj:/var/lib/biomaj/data
+        environment:
+            - BIOMAJ_USER_PASSWORD=${BIOMAJ_USER_PASSWORD}
+            - BIOMAJ_CONFIG=/etc/biomaj/config.yml
+            - REDIS_PREFIX=biomajdownload
+            - RABBITMQ_USER=biomaj
+            - RABBITMQ_PASSWORD=biomaj
+        depends_on:
+            - biomaj-mongo
+            - biomaj-consul
+            - biomaj-rabbitmq
+            - biomaj-redis
+            - biomaj-elasticsearch
+        command: bash -c "sleep 10 ; python3 /root/biomaj-download/bin/biomaj_download_consumer.py"
+
+    biomaj-process-web:
+        image: osallou/biomaj-docker
+        volumes:
+            - ${BIOMAJ_DIR}/biomaj:/var/lib/biomaj/data
+            - ${BIOMAJ_DIR}/biomaj/process:/opt/conda/envs
+        environment:
+            - BIOMAJ_USER_PASSWORD=${BIOMAJ_USER_PASSWORD}
+            - BIOMAJ_CONFIG=/etc/biomaj/config.yml
+            - REDIS_PREFIX=biomajprocess
+            - RABBITMQ_USER=biomaj
+            - RABBITMQ_PASSWORD=biomaj
+        depends_on:
+            - biomaj-mongo
+            - biomaj-consul
+            - biomaj-rabbitmq
+            - biomaj-redis
+            - biomaj-elasticsearch
+        command: bash -c "sleep 10 ; gunicorn -c /etc/biomaj/gunicorn_conf.py -b 0.0.0.0:5000 --log-config /etc/biomaj/production.ini biomaj_process.biomaj_process_web:app"
+
+    biomaj-process-message:
+        image: osallou/biomaj-docker
+        volumes:
+            - ${BIOMAJ_DIR}/biomaj:/var/lib/biomaj/data
+            - ${BIOMAJ_DIR}/biomaj/process:/opt/conda/envs
+        environment:
+            - BIOMAJ_USER_PASSWORD=${BIOMAJ_USER_PASSWORD}
+            - BIOMAJ_CONFIG=/etc/biomaj/config.yml
+            - REDIS_PREFIX=biomajprocess
+            - RABBITMQ_USER=biomaj
+            - RABBITMQ_PASSWORD=biomaj
+            - BIOMAJ_DIR=${BIOMAJ_DATA_DIR}
+            - DOCKER_URL=${DOCKER_URL}
+        depends_on:
+            - biomaj-mongo
+            - biomaj-consul
+            - biomaj-rabbitmq
+            - biomaj-redis
+            - biomaj-elasticsearch
+        command: bash -c "sleep 10 ; python3 /root/biomaj-process/bin/biomaj_process_consumer.py"
+
+    biomaj-daemon-web:
+        image: osallou/biomaj-docker
+        volumes:
+            - ${BIOMAJ_DIR}/biomaj:/var/lib/biomaj/data
+        environment:
+            - BIOMAJ_USER_PASSWORD=${BIOMAJ_USER_PASSWORD}
+            - BIOMAJ_CONFIG=/etc/biomaj/config.yml
+            - REDIS_PREFIX=biomajdaemon
+            - RABBITMQ_USER=biomaj
+            - RABBITMQ_PASSWORD=biomaj
+        depends_on:
+            - biomaj-mongo
+            - biomaj-consul
+            - biomaj-rabbitmq
+            - biomaj-redis
+            - biomaj-influxdb
+            - biomaj-elasticsearch
+            - biomaj-user-web
+            - biomaj-download-web
+            - biomaj-process-web
+        command: bash -c "sleep 10 ; gunicorn -c /etc/biomaj/gunicorn_conf.py -b 0.0.0.0:5000 --log-config /etc/biomaj/production.ini biomaj_daemon.daemon.biomaj_daemon_web:app"
+
+    biomaj-daemon-message:
+        image: osallou/biomaj-docker
+        volumes:
+            - ${BIOMAJ_DIR}/biomaj:/var/lib/biomaj/data
+        environment:
+            - BIOMAJ_USER_PASSWORD=${BIOMAJ_USER_PASSWORD}
+            - BIOMAJ_CONFIG=/etc/biomaj/config.yml
+            - REDIS_PREFIX=biomajdaemon
+            - RABBITMQ_USER=biomaj
+            - RABBITMQ_PASSWORD=biomaj
+        depends_on:
+            - biomaj-mongo
+            - biomaj-consul
+            - biomaj-rabbitmq
+            - biomaj-redis
+            - biomaj-elasticsearch
+            - biomaj-user-web
+            - biomaj-download-web
+            - biomaj-process-web
+        command: bash -c "sleep 10 ; python3 /root/biomaj-daemon/bin/biomaj_daemon_consumer.py"
+
+    biomaj-watcher-web:
+        image: osallou/biomaj-docker
+        volumes:
+            - ${BIOMAJ_DIR}/biomaj:/var/lib/biomaj/data
+        environment:
+            - BIOMAJ_CONFIG=/etc/biomaj/config.yml
+        depends_on:
+            - biomaj-mongo
+            - biomaj-consul
+            - biomaj-rabbitmq
+            - biomaj-redis
+            - biomaj-user-web
+            - biomaj-daemon-web
+            - biomaj-elasticsearch
+        command: bash -c "sleep 10 ; /root/watcher.sh"
+
+    biomaj-cron:
+        image: osallou/biomaj-cron
+        volumes:
+            - ${BIOMAJ_DIR}/biomaj:/var/lib/biomaj/data
+        environment:
+            - BIOMAJ_CONFIG=/etc/biomaj/config.yml
+        depends_on:
+            - biomaj-daemon-web
+
+    biomaj-ftp:
+        image: osallou/biomaj-docker
+        volumes:
+            - ${BIOMAJ_DIR}/biomaj:/var/lib/biomaj/data
+        environment:
+            - BIOMAJ_USER_PASSWORD=${BIOMAJ_USER_PASSWORD}
+            - BIOMAJ_CONFIG=/etc/biomaj/config.yml
+            - REDIS_PREFIX=biomajftp
+            - RABBITMQ_USER=biomaj
+            - RABBITMQ_PASSWORD=biomaj
+            - MASQUERADE_ADDRESS=${MASQUERADE_ADDRESS}
+        depends_on:
+            - biomaj-mongo
+            - biomaj-consul
+            - biomaj-user-web
+            - biomaj-elasticsearch
+        ports:
+            - "2121:21"
+        command: bash -c "sleep 10 ; python3 /root/biomaj-ftp/bin/biomaj_ftp_service.py"
+
+    biomaj-release-web:
+        image: osallou/biomaj-docker
+        volumes:
+            - ${BIOMAJ_DIR}/biomaj:/var/lib/biomaj/data
+        environment:
+            - BIOMAJ_CONFIG=/etc/biomaj/config.yml
+            - REDIS_PREFIX=biomajrelease
+            - REDIS_DAEMON_PREFIX=biomajdaemon
+        depends_on:
+            - biomaj-consul
+            - biomaj-redis
+            - biomaj-daemon-web
+            - biomaj-daemon-message
+        command: bash -c "sleep 10 ; python3 /root/biomaj-release/bin/biomaj_release.py"
